Updated task manager Oauth
