# Task/models/taskModel.js
@@ -9,10 +9,25 @@ const taskSchema = new mongoose.Schema({
     type: String,
     required: true,
   },
-  completed: {
-    type: Boolean,
-    default: false,
+  dueDate: {
+    type: Date, 
+    required: true,
   },
+  status: {
+    type: String,
+    required: true,
+    enum: ['pending', 'in-progress', 'completed'],
+    default: 'pending',
+  },
+  userId: {
+    type: mongoose.Schema.Types.ObjectId,
+    ref: 'User',
+    required: true,
+  },
+  createdAt: {
+    type: Date,
+    default: Date.now,
+  }
 });
 
 const Task = mongoose.model('Task', taskSchema);
