# Task/models/userModel.js
@@ -1,21 +1,13 @@
 const mongoose = require('mongoose');
 
 const userSchema = new mongoose.Schema({
-  googleId: {
-    type: String,
-    unique: true,
-    sparse: true, 
-  },
-  username: {
-    type: String,
-    required: true,
-    unique: true,
-  },
-  password: {
-    type: String,
-    required: true,
-  },
+  googleId: { type: String, required: true, unique: true },
+  displayName: { type: String, required: true },
+  firstName: { type: String },
+  lastName: { type: String },
+  email: { type: String, required: true, unique: true },
+  image: { type: String },
+  createdAt: { type: Date, default: Date.now },
 });
 
-const User = mongoose.model('User', userSchema);
-module.exports = User;
+module.exports = mongoose.model('User', userSchema);
